[tool.poetry]
name = "remote-app"
version = "0.0.0"
description = "Microsoft Remote APP synchronizaion for linux"
authors = ["Barnabás Czémán <trabarni@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.23.0"
requests-ntlm2 = "^6.2.4"
jinja2 = "^2.11.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.7.9"
pylint = "^2.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
